fixed the blue highight on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -11,6 +11,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
 }
 
 a {
@@ -76,6 +77,7 @@ a {
 }
 
 .header-btns .btn {
+
     background-color: transparent;
     color: #fff;
     padding: 12px 20px;
